add Hopfield